@@ -15,7 +15,7 @@ and Ubiquity is developed at:
 	http://bazaar.launchpad.net/~ubuntu-installer/ubiquity/trunk/
 
 Copyright (C) 2005  Javier Carranza
-Copyright (C) 2005, 2006, 2007  Canonical Ltd.
+Copyright (C) 2005, 2006, 2007, 2008, 2009  Canonical Ltd.
 
 Ubiquity has been adapted for usage by the Mythbuntu
 team for the purposes of a Ubuntu derivative focused
