@@ -1,6 +1,6 @@
 # -*- coding: UTF-8 -*-
 
-# Copyright (C) 2006 Canonical Ltd.
+# Copyright (C) 2006, 2007, 2008 Canonical Ltd.
 # Author(s):
 #   Colin Watson <cjwatson@ubuntu.com>.
 #   Mario Limonciello <superm1@ubuntu.com>
