@@ -2,6 +2,7 @@ ubiquity (1.11.3) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Correct Bazaar link in debian/copyright, really this time.
+  * Update copyright years.
 
   [ Evan Dandrea ]
   * Fix the edit partition dialog by properly preseeding
